# architecture-pattern-simulator

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
docs/: README.md  manual-testing.md
docs/design/: architecture.md  code-flow.md  prd.md  project-structure.md  tech-stack.md  user-flow.md
event-sourcing-cqrs/command-api/: Dockerfile  main.py  routes.py
event-sourcing-cqrs/event_store/: events.py  repository.py  upcasters.py
event-sourcing-cqrs/processors/: Dockerfile  outbox_publisher.py  projection_processor.py  risk_processor.py
event-sourcing-cqrs/query-api/: Dockerfile  main.py  routes.py
gateway/: nginx.conf
infra/postgres/: event_sourcing.sql  init.sql  microservices.sql  monolith.sql
microservices/outbox-publisher/: Dockerfile  worker.py
microservices/persistence-service/: Dockerfile  worker.py
microservices/risk-service/: Dockerfile  worker.py
microservices/status-api/: Dockerfile  main.py  sse.py
microservices/submission-api/: Dockerfile  main.py  routes.py
monolith/api/: Dockerfile  main.py  routes.py  service.py
scripts/: playwright_check.py  rubric_check.py
shared/contracts/: submission.schema.json  timeline-event.schema.json
shared/python/: __init__.py  db.py  models.py  redis_client.py  risk_rules.py  timeline.py
tests/python/: test_monolith_api_routes.py  test_risk_rules.py  test_timeline.py
ui/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/e2e/: simulator.spec.ts
(+21 files in other folders)
